# audd

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.md  feature.yml
.github/workflows/: ci.yml  comprehensive-tests.yml
crates/audd-cli/: Cargo.toml
crates/audd-cli/src/: config.rs  error.rs  lib.rs  loader.rs  main.rs  output.rs  report.rs
crates/audd-cli/tests/: README.md  cli_tests.rs  report_tests.rs
crates/audd-cli/tests/golden/: users_csv_vs_json.md
crates/audd_adapters_db/: Cargo.toml
crates/audd_adapters_db/src/: connector.rs  error.rs  factory.rs  firebird.rs  lib.rs  mongodb.rs  mysql.rs  postgres.rs  runtime.rs  sqlite.rs  sqlserver.rs
crates/audd_adapters_file/: Cargo.toml
crates/audd_adapters_file/examples/: load_demo.rs
crates/audd_adapters_file/src/: adapter.rs  csv_adapter.rs  error.rs  factory.rs  json_adapter.rs  lib.rs  remote_adapter.rs  sql_adapter.rs  xml_adapter.rs
crates/audd_adapters_file/tests/: integration_test.rs
crates/audd_compare/: Cargo.toml  README_EN.md  README_ES.md  SEMANTIC_MATCHING.md
crates/audd_compare/examples/: compare_demo.rs  fixture_compare.rs  semantic_demo.rs
crates/audd_compare/src/: config.rs  conflict.rs  engine.rs  lib.rs  matcher.rs  result.rs  types.rs  unified.rs
crates/audd_compare/src/semantic/: mod.rs  normalization.rs  pipeline.rs  pluralization.rs  similarity.rs  synonyms.rs
crates/audd_compare/tests/: integration_test.rs  semantic_acceptance_tests.rs
crates/audd_ir/: Cargo.toml  README_EN.md  README_ES.md
crates/audd_ir/examples/: ir_demo.rs
crates/audd_ir/src/: constraint.rs  index.rs  key.rs  lib.rs  normalization.rs  schema.rs  types.rs  view.rs
crates/audd_ir/tests/: fixtures_test.rs  mvt_e2e_tests.rs
crates/audd_resolution/: Cargo.toml  README.md  README_ES.md
crates/audd_resolution/examples/: resolution_workflow.rs
crates/audd_resolution/src/: config.rs  decision.rs  decision_log.rs  engine.rs  lib.rs  suggestion.rs
crates/audd_resolution/tests/: coverage_test.rs  fixtures.rs  integration_test.rs
docs/: AUDIT_COMPLETION_SUMMARY.md  Architecture.md  CONFIG.md  Configuration.md  Contributing.md  DOCUMENTATION_AUDIT.md  EPIC_07_SUMMARY.md  EPIC_08_SUMMARY.md  FAQ.md  Getting-Started.md  MVT_COMPLETION_SUMMARY.md  README.md  Usage-Examples.md  adapters_db.md  adapters_files.md  implementation_plan.md  ir.md  mvt.md  test_plan.md
docs/en/: Architecture.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Configuration.md  Contributing.md  FAQ.md  Getting-Started.md  README.md  SECURITY.md  Usage-Examples.md  audit_report.md  implementation_plan.md  remote_files.md  test_plan.md
docs/es/: CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  EPIC_07_SUMMARY.md  EPIC_08_SUMMARY.md  README.md  README_PRINCIPAL.md  SECURITY.md  adapters_db.md  adapters_files.md  audit_report.md  implementation_plan.md  ir.md  remote_files.md  reporting.md  test_plan.md
docs/procesos/: sistematizacion_de_la_informacion.md
examples/: README.md  README_ES.md
examples/cli/: README.md  README_EN.md  README_ES.md
fixtures/: README.md  README_ES.md
fixtures/adapters/: README_EN.md  README_ES.md  schema.sql  users.csv  users.json  users.xml
fixtures/ir/: simple_a.json  simple_b.json
scripts/: run_mvt_tests.sh
tests/fixtures/: README.md
tests/fixtures/databases/: ecommerce_a.sql  ecommerce_b.sql
tests/fixtures/scenarios/ecommerce/: README.md
