[workspace]
resolver = "2"
members = ["crates/audd-cli", "crates/audd_adapters_db", "crates/audd_adapters_file", "crates/audd_compare", "crates/audd_ir", "crates/audd_resolution"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AUDD Contributors"]
license = "MIT"
repository = "https://github.com/jmcasimar/AUDD"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
