[package]
name = "audd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for AUDD - Dynamic Data Unification Algorithm"

[[bin]]
name = "audd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
audd_ir = { path = "../audd_ir" }
audd_adapters_file = { path = "../audd_adapters_file" }
audd_adapters_db = { path = "../audd_adapters_db" }
serde_json.workspace = true
