[package]
name = "audd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for AUDD - Dynamic Data Unification Algorithm"

[[bin]]
name = "audd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
audd_ir = { path = "../audd_ir" }
audd_adapters_file = { path = "../audd_adapters_file" }
audd_adapters_db = { path = "../audd_adapters_db" }
audd_compare = { path = "../audd_compare" }
audd_resolution = { path = "../audd_resolution" }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.8"
