[package]
name = "audd_adapters_file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "File adapters for AUDD (CSV, JSON, XML, SQL/DDL, Remote URLs)"

[dependencies]
audd_ir = { path = "../audd_ir" }
serde.workspace = true
serde_json.workspace = true
csv = "1.3"
quick-xml = "0.32"
thiserror = "2.0"
ureq = "2.10"
tempfile = "3.13"

[dev-dependencies]
tempfile = "3.13"

