[package]
name = "audd_compare"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
audd_ir = { path = "../audd_ir" }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = "0.11"
unicode-normalization = "0.1"
unidecode = "0.3"
