[package]
name = "audd_resolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
audd_compare = { path = "../audd_compare" }
audd_ir = { path = "../audd_ir" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
